@@ -6,8 +6,6 @@
 package iut.sae.ihm.controleur;
 
 import java.util.ArrayList;
-
-import javafx.collections.ObservableList;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.scene.control.Alert;
@@ -95,7 +93,9 @@ public class ControleurCreerQuestion {
         for (Categorie element : Donnees.listeCategorie) {
             choiceCategorie.getItems().add(element);
         }
-        choiceCategorie.setValue(Donnees.listeCategorie.getFirst());
+
+        choiceCategorie.setValue(Donnees.listeCategorie.get(0));
+
 
         lesTxtFaux.add(txtRepFausse1);
         lesTxtFaux.add(txtRepFausse2);
